Test on GitHub still fail adding -verbose tocheck